# wildfires

./: .gitignore  README.md  live_example.ipynb  notebook.ipynb  pyproject.toml
