[project]
name = "wildfires"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "branca>=0.8.1",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "plotly>=6.2.0",
    "ruff>=0.12.4",
]
